第五章-（纠结版本一定要最新）

--- a/xd-video-service/src/main/resources/application.yml
+++ b/xd-video-service/src/main/resources/application.yml
@@ -12,7 +12,11 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.220.130:8848
+        server-addr: 192.168.220.131:8848
+    sentinel:
+      transport:
+        dashboard: 192.168.220.131:8084
+        port: 9998
 
 
 mybatis:
