--- a/xd-order-service/src/main/resources/application.yml
+++ b/xd-order-service/src/main/resources/application.yml
@@ -13,10 +13,22 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.220.130:8848
+        server-addr: 192.168.220.131:8848
+    sentinel:
+      transport:
+        dashboard: 192.168.220.131:8084
+        port: 9999
 
 
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
+
+xdclass-video-service:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+
+feign:
+  sentinel:
+    enabled: true
