UPDATE:修改数据库位置至133

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>xd-video-service</module>
         <module>xd-user-service</module>
         <module>xd-order-service</module>
+        <module>xd-gateway</module>
     </modules>
 
     <properties>
