--- a/xd-video-service/src/main/resources/application.yml
+++ b/xd-video-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: xdclass-video-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/cloud_video?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://182.168.220.133:3307/cloud_video?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: LLkk1010
   cloud:
@@ -16,6 +16,14 @@ spring:
       transport:
         dashboard: 192.168.220.131:8084
         port: 9998
+
+  zipkin:
+    base-url: http://192.168.220.131:9411/ #zipkin地址
+    discovery-client-enabled: false  #不用开启服务发现
+
+  sleuth:
+    sampler:
+      probability: 1.0 #采样百分比
 
 
 mybatis:
