--- a/xd-user-service/src/main/resources/application.yml
+++ b/xd-user-service/src/main/resources/application.yml
@@ -6,13 +6,21 @@ spring:
     name: xdclass-user-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/cloud_user?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://192.168.220.133:3307/cloud_user?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: LLkk1010
   cloud:
     nacos:
       discovery:
         server-addr: 192.168.220.131:8848
+
+  zipkin:
+    base-url: http://192.168.220.131:9411/ #zipkin地址
+    discovery-client-enabled: false  #不用开启服务发现
+
+  sleuth:
+    sampler:
+      probability: 1.0 #采样百分比
 
 mybatis:
   configuration:
