--- a/xd-video-service/src/main/resources/application.yml
+++ b/xd-video-service/src/main/resources/application.yml
@@ -1,32 +1,32 @@
-server:
-  port: 9000
-spring:
-  application:
-    name: xdclass-video-service
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://182.168.220.133:3307/cloud_video?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-    username: root
-    password: LLkk1010
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 192.168.220.131:8848
-    sentinel:
-      transport:
-        dashboard: 192.168.220.131:8084
-        port: 9998
-
-  zipkin:
-    base-url: http://192.168.220.131:9411/ #zipkin地址
-    discovery-client-enabled: false  #不用开启服务发现
-
-  sleuth:
-    sampler:
-      probability: 1.0 #采样百分比
-
-
-mybatis:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    map-underscore-to-camel-case: true
+#server:
+#  port: 9000
+#spring:
+#  application:
+#    name: xdclass-video-service
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://192.168.220.133:3307/cloud_video?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+#    username: root
+#    password: LLkk1010
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 192.168.220.131:8848
+#    sentinel:
+#      transport:
+#        dashboard: 192.168.220.131:8084
+#        port: 9998
+#
+#  zipkin:
+#    base-url: http://192.168.220.131:9411/ #zipkin地址
+#    discovery-client-enabled: false  #不用开启服务发现
+#
+#  sleuth:
+#    sampler:
+#      probability: 1.0 #采样百分比
+#
+#
+#mybatis:
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    map-underscore-to-camel-case: true
